--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://bootswatch.com/4/litera/bootstrap.min.css">
   <title>GitHub Finder</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
   <nav class="navbar navbar-dark bg-primary mb-3">
